# Anson_ai

./: pyproject.toml  requirements.txt
data/transcripts/synthetic_test/: depression_synthetic.txt
src/: __main__.py
src/dashboard/: __init__.py  dashboard_plotly.py
src/topic_model/: __init__.py  eda_topics.py  get_topics.py  label_topics.py
src/topic_model/config/: seed_words.yaml
src/utils/: __init__.py  utils.py
